# loom

./: .gitignore  AGENTS.md  LICENSE  README.md  composer_and_reference_model.md  conversation_tree_and_navigation_model.md  index.html  interaction_patterns.md  loom.sh  loom_addressing_and_resolution_model.md  loom_ai_companion_documents_order.md  loom_ai_product_positioning_and_v_1_scope.md  loom_architecture_ledger.md  loom_graph_model.md  loom_tree_and_navigation_model.md  package-lock.json  package.json  playwright.config.ts  sqlite_graph_storage_model.md  vite.config.ts
services/loom-service/: Cargo.toml  build.rs
services/loom-service/migrations/: 0001_initial_schema.sql  0002_orchestration_workflow.sql  0003_capabilities.sql  0004_community_model_benchmarks.sql  0005_loom_metadata.sql  0006_response_code_blocks.sql  0007_response_parts.sql  0008_response_tags_graph.sql  0009_navigation_history.sql  0010_response_soft_delete.sql  0011_loom_soft_delete.sql  0012_ui_state.sql  0013_memory.sql  0014_model_runtime.sql  0015_attachments.sql  0016_attachment_parse_pipeline.sql  0017_attachment_checksum_dedupe.sql  0018_search_fts.sql  0019_cleanup_pseudo_artifact_code_blocks.sql  0020_response_attachment_references.sql  0021_cleanup_orphaned_code_language_tags.sql
services/loom-service/src/: config.rs  display_code.rs  error.rs  main.rs  runtime.rs  speech.rs
services/loom-service/src/agent_runtime/: events.rs  mod.rs  runtime.rs  service.rs  test_support.rs  tool_registry.rs  tools.rs  types.rs
services/loom-service/src/api/: agent_experimental.rs  ask.rs  dev.rs  (+28 more)
(+524 files in other folders)
