[package]
name = "loom-service"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-stream = "0.3"
axum = "0.7"
futures-util = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hashbrown = "=0.15.2"
idna_adapter = "=1.0.0"
indexmap = "=2.7.1"
sqlx = { version = "0.6", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
unicode-segmentation = "=1.12.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[profile.release]
strip = "symbols"
